@@ -1,5 +1,14 @@
 2012-10-09  Peter Rosin  <peda@lysator.liu.se>
 
+	* libc/posix/wordfree.c (wordfree): The wrong words are freed
+	when WRDE_DOOFFS is in use. Restructure the code so that the memory
+	needed to be freed is instead kept in an internal linked list...
+	* libc/posix/wordexp2.h: ...as defined here...
+	* libc/posix/wordexp.c (wordexp): ...and build this internal
+	linked list here, avoiding wasteful strdup calls in the process.
+
+2012-10-09  Peter Rosin  <peda@lysator.liu.se>
+
 	* libc/posix/wordexp.c (wordexp): Return WRDE_NOSPACE on resource
 	allocation failure. Cleanup leftover resources when failing.
 
